<resources>
    <string name="app_name">Aplikasi Kalkulator</string>
    <string name="masukkan_dua_angka">MASUKKAN DUA ANGKA</string>
    <string name="tambah">+</string>
    <string name="kurang">-</string>
    <string name="kali">x</string>
    <string name="bagi">/</string>
    <string name="bersihkan">BERSIHKAN</string>
    <string name="hasil">HASIL</string>
    <string name="ouput" translatable="false">0</string>
    <string name="masukkan_angka_pertama">Masukkan angka pertama</string>
    <string name="masukkan_angka_kedua">Masukkan angka kedua</string>
</resources>