<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtmasukkanangka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masukkan_dua_angka"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <EditText
        android:id="@+id/inputAngkaPertama"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/masukkan_angka_pertama"
        app:layout_constraintBottom_toTopOf="@+id/inputAngkaKedua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmasukkanangka"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputAngkaKedua"
        android:layout_width="347dp"
        android:layout_height="53dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/masukkan_angka_kedua"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="389dp"
        android:layout_height="58dp"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnBersihkan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnTambah"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:text="@string/tambah"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnKurang"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:text="@string/kurang"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnKali"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:text="@string/kali"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnBagi"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:text="@string/bagi"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBersihkan"
        android:layout_width="384dp"
        android:layout_height="54dp"
        android:layout_marginBottom="272dp"
        android:backgroundTint="@color/grey"
        android:text="@string/bersihkan"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txthasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/hasil"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBersihkan" />

    <TextView
        android:id="@+id/outHasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txthasil"
        app:layout_constraintVertical_bias="0.064" />

</androidx.constraintlayout.widget.ConstraintLayout>